# panlingo

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE_CLD2  LICENSE_CLD3  LICENSE_FASTTEXT  LICENSE_LINGUA  LICENSE_MEDIAPIPE  LICENSE_WHATLANG  README.md  README_CLD2.md  README_CLD3.md  README_FASTTEXT.md  README_LANGUAGE_CODE.md  README_LINGUA.md  README_MEDIAPIPE.md  README_WHATLANG.md  SECURITY.md
.github/workflows/: codeql.yml  github-ci.yml
.skill-build/panlingo/: SKILL.md
samples/: Panlingo.Samples.slnx
samples/Panlingo.Samples/: App.axaml  App.axaml.cs  Dockerfile  MainWindow.axaml  MainWindow.axaml.cs  Panlingo.Samples.csproj  Program.cs
src/: Directory.Build.props  LanguageIdentification.CLD3.Native.xml  LanguageIdentification.CLD3.xml  LanguageIdentification.sln  Panlingo.LanguageIdentification.MediaPipe.Native.xml  Panlingo.sln  Panlingo.slnx  run-tests.ps1  run-tests.sh  test-ci.Dockerfile  test.Dockerfile  testEnvironments.json
src/LangaugeCode/: LangaugeCode.csproj  LanguageCodeHelper.cs
src/LangaugeCode.ConsoleTest/: LangaugeCode.ConsoleTest.csproj  Program.cs
src/LangaugeCode.Core/: ISOExtractor.cs  LangaugeCode.Core.csproj
src/LangaugeCode.Generator/: ISOExtractor.cs  ISOGenerator.cs  LangaugeCode.Generator.csproj  Program.cs  StringExtensions.cs  TaskExtensions.cs
src/LangaugeCode.Models/: ISO639Set.cs  ISOGeneratorResources.cs  LangaugeCode.Models.csproj  SetThreeLanguageDescriptor.cs  SetTwoLanguageDescriptor.cs
src/LangaugeCode.SourceGenerator/: ISOGenerator.cs  LangaugeCode.SourceGenerator.csproj  TaskExtensions.cs
src/LangaugeCode.Tests/: LangaugeCode.Tests.csproj  LanguageCodeTests.cs  UnitTest1.cs
src/LanguageCode/: LanguageCode.csproj  LanguageCodeException.cs  LanguageCodeHelper.cs  LanguageCodeResolver.cs  LanguageCodeSearchIndex.cs  resources.json
src/LanguageCode.Benchmark/: LanguageCode.Benchmark.csproj  Program.cs
src/LanguageCode.Generator/: ISOExtractor.cs  LanguageCode.Generator.csproj  Program.cs
src/LanguageCode.Models/: ISO639Set.cs  ISOGeneratorResources.cs  LanguageCode.Models.csproj  LanguageDescriptor.cs  LegacyLanguageAlphaThreeDescriptor.cs  LegacyLanguageAlphaTwoDescriptor.cs  MarcolanguageDescriptor.cs  SetThreeLanguageDescriptor.cs  SetThreeLegacyLanguageDescriptor.cs  SetThreeMarcolanguageDescriptor.cs  SetTwoLanguageDeprecationDescriptor.cs  SetTwoLanguageDescriptor.cs
src/LanguageCode.SourceGenerator/: ISOGenerator.cs  LanguageCode.SourceGenerator.csproj  StringExtensions.cs  resources.json
src/LanguageCode.Tests/: LanguageCode.Tests.csproj  LanguageCodeTests.cs
src/LanguageIdentification.CLD2/: CLD2Detector.cs  CLD2DetectorWrapper.cs  CLD2Prediction.cs  CLD2PredictionResult.cs  LanguageIdentification.CLD2.csproj
src/LanguageIdentification.CLD2.ConsoleTest/: Dockerfile  LanguageIdentification.CLD2.ConsoleTest.csproj  Program.cs
src/LanguageIdentification.CLD2.Native/: .gitignore  CLD2NativeLibrary.cs  Dockerfile  LanguageIdentification.CLD2.Native.csproj
src/LanguageIdentification.CLD2.Native/Native/: CMakeLists.txt  binding.cc  binding.h
src/LanguageIdentification.CLD3/: CLD3Detector.cs  CLD3DetectorWrapper.cs  CLD3Prediction.cs  CLD3PredictionResult.cs  LanguageIdentification.CLD3.csproj
src/LanguageIdentification.CLD3.ConsoleTest/: Dockerfile  LanguageIdentification.CLD3.ConsoleTest.csproj  Program.cs
src/LanguageIdentification.CLD3.Native/: .gitignore  CLD3NativeLibrary.cs  Class1.cs  Dockerfile  LanguageIdentification.CLD3.Native.csproj
src/LanguageIdentification.CLD3.Native/Native/: CMakeLists.txt  bind.cc  bind.h  binding.cc  binding.h  monkey-patch.mjs  setup.py  toolchain-mingw.cmake
src/LanguageIdentification.CLD3.Native/Native/src/: binding.cc  binding.h  fake_protobuf.h
src/LanguageIdentification.FastText/: FastTextDetector.cs  FastTextDetectorWrapper.cs  FastTextLabel.cs  FastTextLabelResult.cs  FastTextPrediction.cs  FastTextPredictionResult.cs  LanguageIdentification.FastText.csproj  NativeLibraryException.cs  Prediction.cs  PredictionLabel.cs
src/LanguageIdentification.FastText.ConsoleTest/: Dockerfile  LanguageIdentification.FastText.ConsoleTest.csproj  Program.cs
src/LanguageIdentification.FastText.Native/: .gitignore  Class1.cs  Dockerfile  FastTextNativeLibrary.cs  LanguageIdentification.FastText.Native.csproj
src/LanguageIdentification.FastText.Native/Native/: CMakeLists.txt  bind.cc  binding.cc  binding.h  toolchain-osxcross.cmake
src/LanguageIdentification.FastText.Native/Native/fasttext/: CMakeLists.txt
src/LanguageIdentification.FastText.SourceGenerator/: FastTextGenerator.cs  LanguageIdentification.FastText.SourceGenerator.csproj
src/LanguageIdentification.Lingua/: LanguageIdentification.Lingua.csproj  LinguaDetector.cs  LinguaDetectorBuilder.cs  LinguaDetectorException.cs  LinguaLanguage.cs  LinguaLanguageCode.cs  LinguaPrediction.cs  LinguaPredictionRange.cs  LinguaStatus.cs  Program.cs
src/LanguageIdentification.Lingua.ConsoleTest/: Dockerfile  LanguageIdentification.Lingua.ConsoleTest.csproj  Program.cs
src/LanguageIdentification.Lingua.Native/: .gitignore  Dockerfile  LanguageIdentification.Lingua.Native.csproj  LinguaNativeLibrary.cs
src/LanguageIdentification.Lingua.Native/Native/lingua-ffi/: Cargo.toml
src/LanguageIdentification.Lingua.Native/Native/lingua-ffi/src/: lib.rs  lingua.h
src/LanguageIdentification.MediaPipe/: Class1.cs  LanguageIdentification.MediaPipe.csproj  MediaPipeDetector.cs  MediaPipeOptions.cs  MediaPipePrediction.cs  NativeLibraryException.cs
src/LanguageIdentification.MediaPipe.ConsoleTest/: Class1.cs  Dockerfile  LanguageIdentification.MediaPipe.ConsoleTest.csproj  Program.cs
src/LanguageIdentification.MediaPipe.Native/: .gitignore  Dockerfile  LanguageIdentification.MediaPipe.Native.csproj  MediaPipeNativeLibrary.cs
src/LanguageIdentification.MediaPipe.SourceGenerator/: LanguageIdentification.MediaPipe.SourceGenerator.csproj  MediaPipeGenerator.cs
src/LanguageIdentification.Native/: Program.cs
src/LanguageIdentification.Tests/: CLD2Tests.cs  CLD3Tests.cs  (+7 more)
(+130 files in other folders)
