[package]
name = "lingua-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
lingua = "1.6.2"
libc = "0.2.157"

[lib]
name = "lingua"

[target.'cfg(target_os = "linux")'.lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "windows")'.lib]
crate-type = ["staticlib"]

[target.'cfg(target_os = "macos")'.lib]
crate-type = ["staticlib", "cdylib"]
